# file-manager

./: .gitignore  .isort.cfg  .pylintrc  LICENSE  README.md  commands.py  filesmanager.py  main.py  module.py  pyproject.toml  requirements.txt
.github/linters/: .isort.cfg  .pylintrc
.github/workflows/: pylint.yml  super-linter.yml  super-linter_and_unit_tests.yml  unit_tests.yml  unit_tests_and_linting.yml
commands/: .example.py  __init__.py  _base.py  cd.py  command.py  cp.py  dir.py  handler.py  help.py  load.py  md.py  rename.py  rm.py
commands/classes/: .example.py  __init__.py  cd.py  cp.py  dir.py  help.py  md.py  rm.py
commands/logic/: __init__.py  handler.py  load.py
commands/methods/: __init__.py  cd.py  cp.py  dir.py  help.py  md.py  rename.py  rm.py
file_manager/: __init__.py  __main__.py
file_manager/src/: __init__.py  main.py
file_manager/src/logic/: __init__.py  handler.py  load.py
file_manager/src/utils/: __init__.py  error.py
file_manager/tests/logic/: test_handler.py  test_load.py
file_manager/tests/utils/: test_error.py  test_text.py
files_manager/: __init__.py  __main__.py
files_manager/commands/: .example.py  __init__.py  cd.py  cp.py  dir.py  help.py  md.py  rename.py  rm.py
files_manager/src/: __init__.py  main.py
files_manager/src/logic/: __init__.py  handler.py  load.py
files_manager/src/utils/: __init__.py  error.py  text.py
files_manager/tests/logic/: test_handler.py  test_load.py
files_manager/tests/utils/: test_error.py  test_text.py
fm_commands/: .example.py  __init__.py  cd.py  cp.py  dir.py  help.py  md.py  rename.py  rm.py
logic/: __init__.py  handler.py  load.py
submodules/: __init__.py  error.py
submodules/utils/: __init__.py  data.json  load.py  text.py
tests/logic/: test_handler.py  test_load.py
tests/utils/: test_error.py  test_text.py  tests_data.json
utils/: __init__.py  error.py  text.py
