[tool.poetry]
name = "files-manager"
version = "2.0.0"
description = "Console file manager with basic functions to manipulate files on your disk"
authors = ["JakubKorytko <jakub.korytko@o2.pl>"]
license = "MIT"
readme = "README.md"
include = ["config.json"]
packages = [
    { include = "files_manager", from = "." },
    { include = "commands", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11.4"
colorama = "^0.4.6"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
pylint = "^3.0.2"
isort = "^5.12.0"

[tool.poetry.scripts]
files-manager = "files_manager.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
